# azure-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-page.yml
examples/: api-manager.rs  client.rs
metadata/: network.json  resource.json
src/: api.rs  api_metadata.rs  api_mgr.rs  arg.rs  azidentityext.rs  client.rs  cmd.rs  lib.rs  poller.rs  wasm_exports.rs
src/api/: ctx.rs  invoke.rs  metadata.rs
src/azidentityext/: access_token_credential.rs
src/client/: poller.rs  response.rs
src/client/poller/: asyncop.rs  body.rs  loc.rs  noop.rs  op.rs  utils.rs
src/poller/: asyncop.rs  body.rs  final_state.rs  loc.rs  noop.rs  op.rs  utils.rs
www/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
www/scripts/: prepare-wasm.js
www/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
www/src/components/: AuthComponents.tsx  AzureAPIExample.tsx  AzureCLIInterface.tsx
www/src/config/: authConfig.ts
www/src/context/: AuthContext.tsx
www/src/hooks/: useAzureAuth.ts
www/src/utils/: wasmLoader.ts
www/src/wasm/: azure.d.ts  azure.js
