[package]
name = "azure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
azure_core = "0.25.0"
azure_identity = "0.25.0"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
