[package]
name = "azure"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
embed-api = []

[dependencies]
anyhow = "1.0.98"
azure_core = "0.25.0"
azure_identity = "0.25.0"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
console_error_panic_hook = "0.1.7"
rust-embed = { version = "8.7.2", features = ["debug-embed"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
pretty_assertions = "1.4.1"
